--- a/templates/99-rsyslog.conf.j2
+++ b/templates/99-rsyslog.conf.j2
@@ -3,22 +3,22 @@
 $WorkDirectory {{ rsyslog_client_spool_directory }}
 $template RFC3164fmt,"<%PRI%>%TIMESTAMP% %HOSTNAME% %syslogtag%%msg%"
 
-{% if groups['rsyslog_all'] is defined and groups['rsyslog_all'] %}
-# Log shipment rsyslog target servers
 {% for server in groups['rsyslog_all'] %}
-$ActionQueueFileName {{ server }}
-$ActionQueueSaveOnShutdown on
-$ActionQueueType LinkedList
-$ActionResumeRetryCount 250
+{% if container_name[0:3] == server[0:3] %}
 {% if rsyslog_client_tcp_reception == true %}
 *.* @@{{ hostvars[server]['ansible_ssh_host'] }}:{{ rsyslog_client_tcp_port }};RFC3164fmt
 {% endif %}
 {% if rsyslog_client_udp_reception == true %}
 *.* @{{ hostvars[server]['ansible_ssh_host'] }}:{{ rsyslog_client_udp_port }};RFC3164fmt
 {% endif %}
-
-{% endfor %}
+$ActionExecOnlyWhenPreviousIsSuspended on
+& @@{{ hostvars[groups['rsyslog_all'][(loop.index0 + 1)  % loop.length]]['ansible_ssh_host'] }}:{{ rsyslog_client_tcp_port }};RFC3164fmt
+& @@{{ hostvars[groups['rsyslog_all'][(loop.index0 + 2)  % loop.length]]['ansible_ssh_host'] }}:{{ rsyslog_client_tcp_port }};RFC3164fmt
+& /var/log/localbuffer
+$ActionExecOnlyWhenPreviousIsSuspended off
 {% endif %}
+{% endfor %}
+
 
 {% if rsyslog_client_user_defined_targets is defined %}
 # Log shipment user defined target servers
